--- a/index.html
+++ b/index.html
@@ -1,7 +1,79 @@
 <html>
-  <head><title>Abhilash Krishna Raj's ePortfolio</title></head>
+  <head>
+    <title>Abhilash Krishna Raj's CS-499 ePortfolio</title>
+    <style>
+      body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; }
+      h1, h2 { color: #2c3e50; }
+      nav { margin-bottom: 20px; }
+      nav a { margin-right: 15px; text-decoration: none; color: #007acc; }
+      section { margin-bottom: 40px; }
+      .card { border: 1px solid #ddd; padding: 20px; border-radius: 8px; margin-bottom: 20px; }
+    </style>
+  </head>
   <body>
-    <h1>Welcome to my CS-499 ePortfolio</h1>
-    <p>This site will showcase my enhanced artifacts in software design, algorithms, and databases.</p>
+    <h1>Welcome to My CS-499 ePortfolio</h1>
+    <p>
+      This site presents my capstone project and professional growth as a Computer Science major at SNHU. 
+      It includes my professional self-assessment, enhanced artifacts, and project narratives that demonstrate 
+      my skills in software engineering, algorithms, databases, and security.
+    </p>
+
+    <!-- Navigation -->
+    <nav>
+      <a href="#self-assessment">Professional Self-Assessment</a>
+      <a href="#code-review">Code Review</a>
+      <a href="#artifacts">Enhanced Artifacts</a>
+      <a href="#narratives">Narratives</a>
+    </nav>
+
+    <!-- Section 1: Self-Assessment -->
+    <section id="self-assessment" class="card">
+      <h2>📄 Professional Self-Assessment</h2>
+      <p>
+        Read my full self-assessment where I reflect on my strengths, professional goals, and how this program 
+        prepared me to enter the computer science field.
+      </p>
+      <a href="Professional Self-Assessment.docx">Download Self-Assessment (DOCX)</a>
+    </section>
+
+    <!-- Section 2: Code Review -->
+    <section id="code-review" class="card">
+      <h2>🎥 Code Review</h2>
+      <p>
+        Watch my milestone one code review, where I discuss the original artifact and my planned enhancements 
+        for the capstone project.
+      </p>
+      <a href="https://www.youtube.com/watch?v=YOUR_VIDEO_LINK" target="_blank">Watch Code Review on YouTube</a>
+    </section>
+
+    <!-- Section 3: Enhanced Artifacts -->
+    <section id="artifacts">
+      <h2>💻 Enhanced Artifacts</h2>
+
+      <div class="card">
+        <h3>Enhancement One: Software Design and Engineering</h3>
+        <p>Full-stack redesign with Spring Boot and React.</p>
+        <a href="Enhancement One - Software Design and Engineering/">View Files</a>
+      </div>
+
+      <div class="card">
+        <h3>Enhancement Two: Algorithms and Data Structures</h3>
+        <p>Introduced TreeMap + HashMap, and added CSV/JSON export features.</p>
+        <a href="Enhancement Two - Algorithms and Data Structures/">View Files</a>
+      </div>
+
+      <div class="card">
+        <h3>Enhancement Three: Databases</h3>
+        <p>Integrated MongoDB, added JWT authentication, and refined repository queries.</p>
+        <a href="Enhancement Three - Databases/">View Files</a>
+      </div>
+    </section>
+
+    <!-- Section 4: Narratives -->
+    <section id="narratives" class="card">
+      <h2>📚 Narratives</h2>
+      <p>Each milestone narrative explains the enhancements and their relation to course outcomes.</p>
+      <a href="Narratives/">View Narratives Folder</a>
+    </section>
   </body>
 </html>
