--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         Watch my milestone one code review, where I discuss the original artifact and my planned enhancements 
         for the capstone project.
       </p>
-      <a href="https://www.youtube.com/watch?v=YOUR_VIDEO_LINK" target="_blank">Watch Code Review on YouTube</a>
+      <a href="https://youtu.be/zHCyWbz1W30" target="_blank">Watch Code Review on YouTube</a>
     </section>
 
     <!-- Section 3: Enhanced Artifacts -->
